Change structure in project

--- a/src/components/counter/Counter.module.css
+++ b/src/components/counter/Counter.module.css
@@ -39,6 +39,8 @@
 
 .textbox {
   font-size: 32px;
+  padding: 2px;
+  width: 64px;
   text-align: center;
   margin-right: 4px;
 }
@@ -53,6 +55,7 @@
 }
 
 .asyncButton {
+  composes: button;
   position: relative;
 }
 
