--- a/src/pages/Counter.css
+++ b/src/pages/Counter.css
@@ -1,19 +1,19 @@
-.App {
+.Counter {
   text-align: center;
 }
 
-.App-logo {
+.Counter-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+  .Counter-logo {
+    animation: Counter-logo-float infinite 3s ease-in-out;
   }
 }
 
-.App-header {
+.Counter-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,11 +22,11 @@
   font-size: calc(10px + 2vmin);
 }
 
-.App-link {
+.Counter-link {
   color: rgb(112, 76, 182);
 }
 
-@keyframes App-logo-float {
+@keyframes Counter-logo-float {
   0% {
     transform: translateY(0);
   }
